Fix for firefox navbar collapse positioning
Setting the left navbar header to display:inline-block to ensure that
the collapse clears properly in the mobile version of firefox.

--- a/app/static/app/base.css
+++ b/app/static/app/base.css
@@ -18,8 +18,8 @@ body {
     cursor:pointer;
 }
 
-.clear {
-    clear:both;
+.inline {
+    display:inline-block;
 }
 
 .page-login .title
